--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,8 @@ add_subdirectory(ext/liblava)
 
 add_executable(render main.cpp)
 
+if (WIN32)
+  target_compile_definitions(render PRIVATE WIN32)
+endif()
+
 target_link_libraries(render PRIVATE lava::app)
