Configured release script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 
 project(render)
@@ -9,5 +10,7 @@ add_executable(render main.cpp)
 if (WIN32)
   target_compile_definitions(render PRIVATE WIN32)
 endif()
+
+target_compile_definitions(render PRIVATE Release=$<CONFIG:Release>)
 
 target_link_libraries(render PRIVATE lava::app)
