--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 
-project(render)
-
 add_subdirectory(ext/liblava)
 
-add_executable(render main.cpp)
-
+project(sorting)
+add_executable(sorting src/sorting.cpp)
 if (WIN32)
-  target_compile_definitions(render PRIVATE WIN32)
+  target_compile_definitions(sorting PRIVATE WIN32)
 endif()
-
-target_compile_definitions(render PRIVATE Release=$<CONFIG:Release>)
-
-target_link_libraries(render PRIVATE lava::app)
+target_compile_definitions(sorting PRIVATE Release=$<CONFIG:Release>)
+target_link_libraries(sorting PRIVATE lava::app)
+target_sources(
+  sorting PRIVATE
+  src/shared_behavior.hpp
+  )
