--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(ext/liblava)
 
+# TODO: This can be greatly simplified.
+
 project(sorting)
 add_executable(sorting src/sorting.cpp)
 if(WIN32)
@@ -21,4 +23,14 @@ endif()
 target_compile_definitions(reference PRIVATE Release=$<CONFIG:Release>)
 target_link_libraries(reference PRIVATE lava::app)
 target_sources(reference PRIVATE
+  src/shared_behavior.hpp)
+
+project(alternative)
+add_executable(alternative src/alternative.cpp)
+if(WIN32)
+  target_compile_definitions(alternative PRIVATE WIN32)
+endif()
+target_compile_definitions(alternative PRIVATE Release=$<CONFIG:Release>)
+target_link_libraries(alternative PRIVATE lava::app)
+target_sources(alternative PRIVATE
   src/shared_behavior.hpp)
