Fixed runtime errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,22 +25,9 @@ target_link_libraries(reference PRIVATE lava::app)
 target_sources(reference PRIVATE
   src/shared_behavior.hpp)
 
-project(alternative_short)
-add_executable( alternative_short src/alternative.cpp)
-if(WIN32)
-  target_compile_definitions(alternative_short PRIVATE WIN32)
-endif()
-target_compile_definitions(alternative_short PRIVATE Release=$<CONFIG:Release>)
-target_link_libraries(alternative_short PRIVATE lava::app)
-target_sources(alternative_short PRIVATE
-  src/shared_behavior.hpp)
-
-project(alternative_int)
-add_executable(alternative_int src/alternative.cpp)
-if(WIN32)
-  target_compile_definitions(alternative_int PRIVATE WIN32)
-endif()
-target_compile_definitions(alternative_int PRIVATE Release=$<CONFIG:Release>)
-target_link_libraries(alternative_int PRIVATE lava::app)
-target_sources(alternative_int PRIVATE
+project(alternative)
+add_executable(alternative src/alternative.cpp)
+target_compile_definitions(alternative PRIVATE Release=$<CONFIG:Release>)
+target_link_libraries(alternative PRIVATE lava::app)
+target_sources(alternative PRIVATE
   src/shared_behavior.hpp)
